--- a/style.css
+++ b/style.css
@@ -27,8 +27,9 @@ body {
 
 #landing {
 
-	/*height: 80vh;
+	height: 80vh;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;*/	
+	justify-content: center;
+	align-items: center;
 }
